Correct Microdata representations

--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -60,14 +60,11 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <article<?$permalink::is_permalink ne="1"> itemprop="blogPost" itemscope itemtype="http://schema.org/BlogPosting" itemref="author"</?>>
-        <?$utils::has_image ne="1">
-          <meta content="{{image}}" itemprop="image">
-        </?>
-
+      <article>
+        <?$utils::has_image ne="1"><meta content="{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
-        <h1 itemprop="name"><?$permalink::is_permalink ne="1"><a rel="bookmark" href="$url$path/$fn.$default_flavour"></?>$title<?$permalink::is_permalink ne="1"></a></?></h1>
+        <h1 itemprop="name">$title</h1>
 
         <footer>
           <p>Posted on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time> under <a class="tag" href="$url$path/"><span itemprop="keywords">$categories::name</span></a></p>
@@ -108,5 +105,5 @@
 </a>
 
 <!-- blosxom categories_story -->
-            <li><time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
+            <li><time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
               <a href="$url$path/$fn.$default_flavour">$title</a></li>
