Map `id=author` except About page

--- a/.grunt/html/shared/global-footer.mustache
+++ b/.grunt/html/shared/global-footer.mustache
@@ -1,7 +1,13 @@
 <footer role="contentinfo">
-  <address class="byline">
-    {{#about}}<p>Made by <mark>Kyo Nagashima</mark>.</p>{{/about}}
-    {{^about}}<p itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <a rel="author" href="/about/" itemprop="url"><span itemprop="name">Kyo Nagashima</span></a>.</p>{{/about}}
+  {{#about}}
+    <address class="byline">
+    <p>Made by <mark>Kyo Nagashima</mark>.</p>
+  {{/about}}
+
+  {{^about}}
+    <address id="author" class="byline">
+    <p itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <a rel="author" href="/about/" itemprop="url"><span itemprop="name">Kyo Nagashima</span></a>.</p>
+  {{/about}}
   </address>
 
   <section class="elsewhere">
