Improve birth date recognizability

--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -27,7 +27,7 @@
           <img src="http://www.gravatar.com/avatar/38b5f9f7d2faa315ec10866e18fc3bd7.png?s=320" alt="This Is the End" itemprop="image">
         </figure>
 
-        <p><ruby><span itemprop="familyName">長嶋</span><rp>(</rp><rt>ながしま</rt><rp>)</rp><span itemprop="givenName">享</span><rp>(</rp><rt>きょう</rt><rp>)</rp></ruby>と言います。<time datetime="1976-07-23" itemprop="birthDate">昭和51年7月23日</time>生まれ。<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressRegion">神奈川県</span>在住</span>。</p>
+        <p><ruby><span itemprop="familyName">長嶋</span><rp>(</rp><rt>ながしま</rt><rp>)</rp><span itemprop="givenName">享</span><rp>(</rp><rt>きょう</rt><rp>)</rp></ruby>と言います。<time datetime="1976-07-23" itemprop="birthDate">1976年7月23日</time>生まれ。<span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress"><span itemprop="addressRegion">神奈川県</span>在住</span>。</p>
 
         <p>インターネットでは<em itemprop="additionalName">hail2u</em>または<em itemprop="additionalName">kyo</em>というニックネームで活動していることが多いですが、<em itemprop="additionalName">h2u</em>や<em itemprop="additionalName">hail2u_</em>等でも活動することもあります。</p>
 
