Don't treat Google+ special

--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -34,7 +34,7 @@
         <ul>
           <li><a rel="me" href="https://twitter.com/hail2u_">Twitter</a></li>
           <li><a rel="me" href="https://www.facebook.com/hail2u">Facebook</a></li>
-          <li><a rel="me author" href="https://plus.google.com/+KyoNagashima">Google+</a></li>
+          <li><a rel="me" href="https://plus.google.com/+KyoNagashima">Google+</a></li>
           <li><a rel="me" href="https://github.com/hail2u">GitHub</a></li>
           <li><a rel="me" href="https://pinboard.in/u:hail2u">Pinboard</a></li>
           <li><a rel="me" href="http://b.hatena.ne.jp/h2u/">はてなブックマーク</a></li>
