Treat "About" as `ContactPage` not only `AboutPage`

--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja-JP" itemscope itemtype="http://schema.org/AboutPage">
+<html lang="ja-JP" itemscope itemtype="http://schema.org/AboutPage http://schema.org/ContactPage">
   <head>
     {{> metas}}
 
