--- a/.grunt/html/shared/structured-data.mustache
+++ b/.grunt/html/shared/structured-data.mustache
@@ -12,5 +12,5 @@
 <meta content="{{site_title}}" property="og:site_name">
 <meta content="100000022521341" prefix="fb: http://ogp.me/ns/fb#" property="fb:admins">
 
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:creator" content="@hail2u_">
