Create Twitter account for website

--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -80,7 +80,7 @@
           <li><a type="application/rss+xml" href="http://hail2u.net/blog/feed">Weblogの記事のみ</a></li>
         </ul>
 
-        <p>他に<a href="https://twitter.com/hail2u_">Twitter</a>や<a rel="alternate" type="text/html" href="https://www.facebook.com/hail2u.net">Facebookページ</a>、<a rel="alternate" type="text/html" href="http://u2liah.tumblr.com/">Tumblr</a>でも購読することができます。</p>
+        <p>他に<a rel="alternate" type="text/html" href="https://twitter.com/hail2unet">Twitter</a>や<a rel="alternate" type="text/html" href="https://www.facebook.com/hail2u.net">Facebookページ</a>、<a rel="alternate" type="text/html" href="http://u2liah.tumblr.com/">Tumblr</a>でも購読することができます。</p>
       </section>
 
       <section id="license">
@@ -139,7 +139,7 @@
 
         <p>訪問者の情報を<a href="http://www.google.com/analytics/">Google Analytics</a>を使って収集しています。Analyticsによるデータの収集はこのウェブサイト自身のクッキーを利用しているので、完全に無効化するには<a href="http://tools.google.com/dlpage/gaoptout">Google Analytics Opt-out Browser Add-on</a>をご使用のブラウザにインストールする必要があります。</p>
 
-        <p>その他にも使用しているソーシャル・メディアのウィジェット、例えば<a href="https://about.twitter.com/resources/buttons">TwitterのTwitterボタン</a>等によりトラッキングが行われている可能性があります。ウィジェットによりオプトアウトする方法が異なるので、それぞれの提供元を参照してください。</p>
+        <p>その他にも使用しているソーシャル・メディアのウィジェット、例えば<a href="https://about.twitter.com/resources/buttons">Twitterの共有ボタン</a>等によりトラッキングが行われている可能性があります。ウィジェットによりオプトアウトする方法が異なるので、それぞれの提供元を参照してください。</p>
       </section>
     </main>
 
