Inverse `.tag` nesting for styling

--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -67,7 +67,7 @@
         <h1 itemprop="name">$title</h1>
 
         <footer>
-          <p>Posted on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time> under <a class="tag" href="$url$path/"><span itemprop="keywords">$categories::name</span></a></p>
+          <p>Posted on <time datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time> under <span class="tag" itemprop="keywords"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
 
         <div itemprop="articleBody">$body</div>
