Need `type` attribute for a feed link

--- a/.grunt/html/shared/global-footer.mustache
+++ b/.grunt/html/shared/global-footer.mustache
@@ -23,13 +23,13 @@
       <li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></li>
 
       {{#weblog}}
-        <li><a href="/feed">Home RSS</a></li>
-        <li><a rel="alternate" href="/blog/feed">Weblog RSS</a></li>
+        <li><a type="application/rss+xml" href="/feed">Home RSS</a></li>
+        <li><a rel="alternate" type="application/rss+xml" href="/blog/feed">Weblog RSS</a></li>
       {{/weblog}}
 
       {{^weblog}}
-        <li><a rel="alternate" href="/feed">Home RSS</a></li>
-        <li><a href="/blog/feed">Weblog RSS</a></li>
+        <li><a rel="alternate" type="application/rss+xml" href="/feed">Home RSS</a></li>
+        <li><a type="application/rss+xml" href="/blog/feed">Weblog RSS</a></li>
       {{/weblog}}
     </ul>
   </section>
