Optimize "Global Footer" layout
  - on small: align vertically footlinks/line/byline
  - on medium: align vertically line/byline, horizontally footlinks
  - on large: align horizontally line/byline/footlinks

--- a/.grunt/html/shared/global-footer.mustache
+++ b/.grunt/html/shared/global-footer.mustache
@@ -1,23 +1,4 @@
 <footer role="contentinfo">
-  {{#about}}
-    <address class="byline">
-    <p>Made by <mark>Kyo Nagashima</mark>.</p>
-  {{/about}}
-
-  {{^about}}
-    <address id="author" class="byline">
-    <p itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <a rel="author" href="/about/" itemprop="url"><span itemprop="name">Kyo Nagashima</span></a>.</p>
-  {{/about}}
-  </address>
-
-  <section class="elsewhere">
-    <ul>
-      <li><a href="https://twitter.com/hail2u_">Twitter</a></li>
-      <li><a href="https://github.com/hail2u">GitHub</a></li>
-      <li><a href="https://pinboard.in/u:hail2u">Pinboard</a></li>
-    </ul>
-  </section>
-
   <section class="footlinks">
     <ul>
       <li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></li>
@@ -33,4 +14,12 @@
       {{/weblog}}
     </ul>
   </section>
+
+  {{#about}}
+    <p class="byline">Made by <mark>Kyo Nagashima</mark>.</p>
+  {{/about}}
+
+  {{^about}}
+    <p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a rel="author" href="/about/" itemprop="url">Kyo Nagashima</a></span>.</p>
+  {{/about}}
 </footer>
