--- a/.grunt/html/blog/index.mustache
+++ b/.grunt/html/blog/index.mustache
@@ -17,6 +17,12 @@
     {{> global-header}}
 
     <main role="main">
+      <section role="search">
+        <h1>全文検索</h1>
+
+        {{> google-cse}}
+      </section>
+
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="post-list">
@@ -39,7 +45,6 @@
       {{/articles}}
     </main>
 
-    {{> google-cse}}
     {{> global-footer}}
     {{> scripts}}
   </body>
