--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -87,8 +87,8 @@
 
         <ul>
           <li><a href="http://blosxom.sourceforge.net">Blosxom</a></li>
-          <li><a href="https://github.com/GoalSmashers/clean-css">Clean CSS</a></li>
-          <li><a href="https://github.com/buildingblocks/grunt-combine-media-queries">Combine Media Queires</a></li>
+          <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
+          <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
           <li><a href="http://git-scm.com/">Git</a></li>
           <li><a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://handlebarsjs.com/">Handlebars.js</a></li>
@@ -109,11 +109,12 @@
           <li><a href="http://code.google.com/p/google-code-prettify/">Google Code Prettify</a></li>
           <li><a href="https://github.com/aFarkas/html5shiv">HTML5 Shiv</a></li>
           <li><a href="http://necolas.github.io/normalize.css/">Normalize.css</a></li>
+          <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
         </ul>
 
         <h2>マークアップとスタイルシート</h2>
 
-        <p>マークアップは<a href="http://www.w3.org/TR/html5/">HTML5</a>に従って行っています。スタイルシートはSassのSCSS文法を使って書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。</p>
+        <p>マークアップは<a href="http://www.w3.org/TR/html5/">HTML5</a>に従って行っています。スタイルシートはSassの<a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使って書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。</p>
 
         <h2>広告</h2>
 
