--- a/.grunt/html/index.mustache
+++ b/.grunt/html/index.mustache
@@ -68,7 +68,7 @@
       <section id="follow-me">
         <h1>フォロー</h1>
 
-        <ul class="social-links">
+        <ul class="follow">
           <li><a href="https://twitter.com/hail2unet"><img src="../../images/icon/twitter.min.svg" alt="Twitter"></a></li>
           <li><a href="https://www.facebook.com/hail2u.net"><img src="../../images/icon/facebook.min.svg" alt="Facebook"></a></li>
           <li><a href="http://u2liah.tumblr.com/"><img src="../../images/icon/tumblr.min.svg" alt="Tumblr"></a></li>
