--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -20,9 +20,29 @@
       <section id="website">
         <h1>このウェブサイトについて</h1>
 
-        <p>ドメインを取得したのは2003年くらいですが、このHail2u.netはそこそこ息の長いウェブサイトで、20世紀からあります。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標です。他にはウェブサイトの制作周りのことをだらだらコンスタントに書けたらいいなと考えています。</p>
+        <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録を、ウェブサイトの制作周りの話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
 
         <p>時々長期にわたって更新が止まりますが、そういう時はほぼ何かしらのゲームにはまってる時です。</p>
+
+        <h2>購読</h2>
+
+        <p>このウェブサイトの更新情報は、以下の2種類のRSSフィードで配信しています。</p>
+
+        <ul>
+          <li><a rel="alternate" type="application/rss+xml" href="http://hail2u.net/feed">ウェブサイトの更新情報とウェブログの記事</a></li>
+          <li><a type="application/rss+xml" href="http://hail2u.net/blog/feed">ウェブログの記事のみ</a></li>
+        </ul>
+
+        <p>他に<a rel="alternate" type="text/html" href="https://twitter.com/hail2unet">Twitter</a>や<a rel="alternate" type="text/html" href="https://www.facebook.com/hail2u.net">Facebookページ</a>、<a rel="alternate" type="text/html" href="http://u2liah.tumblr.com/">Tumblr</a>でも購読することができます。</p>
+
+        <h2>ライセンス</h2>
+
+        <figure>
+          <a rel="license" href="{{license_url}}"><img src="/images/about/cc-by-nc.png" alt="Creative Commons — Attribution-NonCommercial"></a>
+          <figcaption>License Everything under a CC BY-NC</figcaption>
+        </figure>
+
+        <p>このウェブサイト内の全ての文書とファイル(画像やスタイルシートを含みます)は、そのファイル自体に別のライセンス情報が明記または添付されていない限り<a rel="license" href="{{license_url}}">Creative Commons — Attribution-NonCommercial</a>の元で公開されています。</p>
       </section>
 
       {{> google-adsense-ad-main}}
@@ -47,35 +67,10 @@
           <li><a rel="me" href="https://plus.google.com/+KyoNagashima">Google+</a></li>
           <li><a rel="me" href="https://github.com/hail2u">GitHub</a></li>
           <li><a rel="me" href="https://pinboard.in/u:hail2u">Pinboard</a></li>
-          <li><a rel="me" href="http://b.hatena.ne.jp/h2u/">はてなブックマーク</a></li>
           <li><a rel="me" href="https://www.readability.com/hail2u/">Readability</a></li>
           <li><a rel="me" href="http://www.pinterest.com/hail2u/">Pinterest</a></li>
           <li><a rel="me" href="http://www.last.fm/user/hail2u">Last.fm</a></li>
         </ul>
-      </section>
-
-      <section id="subscription">
-        <h1>購読</h1>
-
-        <p>このウェブサイトの更新情報は、以下の2種類のRSSフィードで配信しています。</p>
-
-        <ul>
-          <li><a rel="alternate" type="application/rss+xml" href="http://hail2u.net/feed">ウェブサイトの更新情報のみ</a></li>
-          <li><a type="application/rss+xml" href="http://hail2u.net/blog/feed">Weblogの記事のみ</a></li>
-        </ul>
-
-        <p>他に<a rel="alternate" type="text/html" href="https://twitter.com/hail2unet">Twitter</a>や<a rel="alternate" type="text/html" href="https://www.facebook.com/hail2u.net">Facebookページ</a>、<a rel="alternate" type="text/html" href="http://u2liah.tumblr.com/">Tumblr</a>でも購読することができます。</p>
-      </section>
-
-      <section id="license">
-        <h1>ライセンス</h1>
-
-        <figure>
-          <a rel="license" href="{{license_url}}"><img src="/images/about/cc-by-nc.png" alt="Creative Commons — Attribution-NonCommercial"></a>
-          <figcaption>License Everything under a CC BY-NC</figcaption>
-        </figure>
-
-        <p>このウェブサイト内の全ての文書とファイル(画像やスタイルシートを含みます)は、そのファイル自体に別のライセンス情報が明記または添付されていない限り<a rel="license" href="{{license_url}}">Creative Commons — Attribution-NonCommercial</a>の元で公開されています。</p>
       </section>
 
       <section id="colophon">
@@ -114,7 +109,7 @@
 
         <h2>マークアップとスタイルシート</h2>
 
-        <p>マークアップは<a href="http://www.w3.org/TR/html5/">HTML5</a>に従って行っています。スタイルシートはSassの<a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使って書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。</p>
+        <p>マークアップは<a href="http://www.w3.org/TR/html5/">HTML5</a>に従って行っています。スタイルシートはSassの<a href="http://sass-lang.com/documentation/file.SASS_REFERENCE.html#syntax">SCSS文法</a>を使ってCSS 3で書いています。両者のより詳細な解説とプレビューとして<a href="/about/style-guide/">Style Guide</a>を用意してあるので、そちらも参照してください。何か問題を見つけた場合は<a href="contact">問い合わせ</a>より教えてくれると助かります。</p>
 
         <h2>広告</h2>
 
