Use `story_counter` plugin

--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -73,7 +73,7 @@
         <div itemprop="articleBody">$body</div>
       </article>
 
-      <?$utils::story_counter eq="1">
+      <?$story_counter::count eq="1">
         {{> google-adsense-ad-main}}
       </?>
 
