Add Picks to projects

--- a/.grunt/html/projects/index.mustache
+++ b/.grunt/html/projects/index.mustache
@@ -18,12 +18,24 @@
 
     <main role="main">
       <section>
+        <h1><a href="http://picks.hail2u.net/">Picks</a></h1>
+
+        <figure>
+          <a href="http://picks.hail2u.net/"><img src="/images/projects/picks.png" alt="Picks"></a>
+
+          <figcaption>興味の変遷をURLで辿る</figcaption>
+        </figure>
+
+        <p>Picksは僕が興味をもった様々なURLをアイコンをヒントにざっと眺めることの出来るウェブサイトです。</p>
+      </section>
+
+      {{> google-adsense-ad-main}}
+
+      <section>
         <h1><a href="https://github.com/hail2u/unutm">UnUTM</a></h1>
 
         <p>UnUTMはウェブページのURLからGoogle Analyticsなどで利用されているUrchin Traffic Monitor (UTM)用のパラメーターを自動的に削除し、URLの分散を解消するJavaScriptライブラリです。</p>
       </section>
-
-      {{> google-adsense-ad-main}}
 
       <section>
         <h1><a href="https://github.com/hail2u/node-csswring">CSSWring</a></h1>
@@ -59,7 +71,7 @@
         <h1><a href="http://hail2u.github.io/google-fonts.html">G.F.</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/google-fonts.html"><img src="/images/projects/google-fonts.png" alt=""></a>
+          <a href="http://hail2u.github.io/google-fonts.html"><img src="/images/projects/google-fonts.png" alt="Courgete"></a>
 
           <figcaption>これが<a href="http://www.google.com/fonts/specimen/Courgette">Courgete</a>だ！</figcaption>
         </figure>
@@ -135,7 +147,8 @@
         <h1><a href="https://github.com/hail2u/scss-column-equation">SCSS Column Equation</a></h1>
 
         <figure>
-          <a href="https://github.com/hail2u/scss-column-equation"><img src="/images/projects/scss-column-eqation.png" alt=""></a>
+          <a href="https://github.com/hail2u/scss-column-equation"><img src="/images/projects/scss-column-eqation.png" alt="| | | |"></a>
+
           <figcaption>Rapid Prototyping with Sass</figcaption>
         </figure>
 
@@ -146,7 +159,8 @@
         <h1><a href="http://hail2u.github.io/hougan.html">Hougan</a></h1>
 
         <figure>
-          <a href="http://hail2u.github.io/hougan.html"><img src="/images/projects/hougan.png" alt=""></a>
+          <a href="http://hail2u.github.io/hougan.html"><img src="/images/projects/hougan.png" alt="田"></a>
+
           <figcaption>Sectional Paper Pattern</figcaption>
         </figure>
 
@@ -180,7 +194,8 @@
         <h1><a href="http://iine.hail2u.net/">Iine!</a></h1>
 
         <figure>
-          <a href="http://iine.hail2u.net/"><img src="/images/projects/iine.png" alt=""></a>
+          <a href="http://iine.hail2u.net/"><img src="/images/projects/iine.png" alt="Iine!"></a>
+
           <figcaption>My Inspiration Deposit</figcaption>
         </figure>
 
