Add grunt-pubsubhubbub_publish to projects

--- a/.grunt/html/projects/index.mustache
+++ b/.grunt/html/projects/index.mustache
@@ -18,6 +18,13 @@
 
     <main role="main">
       <section>
+        <h1><a href="https://github.com/hail2u/grunt-pubsubhubbub_publish">pubsubhubbub_publish (Gruntプラグイン)</a></h1>
+
+        <p>pubsubhubbub_publish (Gruntプラグイン)はGoogleが提供している<a href="https://pubsubhubbub.appspot.com/">PubSubHubbubハブ</a>へ指定したURLのフィードを<code>publish</code>するGruntプラグインです。</p>
+      </section>
+
+      {{> google-adsense-ad-main}}
+
         <h1><a href="http://picks.hail2u.net/">Picks</a></h1>
 
         <figure>
@@ -28,8 +35,6 @@
 
         <p>Picksは僕が興味をもった様々なURLをアイコンをヒントにざっと眺めることの出来るウェブサイトです。</p>
       </section>
-
-      {{> google-adsense-ad-main}}
 
       <section>
         <h1><a href="https://github.com/hail2u/unutm">UnUTM</a></h1>
