--- a/.grunt/html/projects/index.mustache
+++ b/.grunt/html/projects/index.mustache
@@ -18,13 +18,20 @@
 
     <main role="main">
       <section>
+        <h1><a href="https://github.com/hail2u/grunt-rsync-ac">rsync-ac (Gruntプラグイン)</a></h1>
+
+        <p>rsync-ac (Gruntプラグイン)は<a href="http://rsync.samba.org/">rsync</a>を使って他のディレクトリへファイルをコピーするGruntプラグインです。オプション設定を絞ることであまり考えずに使えるようにしました。</p>
+      </section>
+
+      {{> google-adsense-ad-main}}
+
+      <section>
         <h1><a href="https://github.com/hail2u/grunt-pubsubhubbub_publish">pubsubhubbub_publish (Gruntプラグイン)</a></h1>
 
         <p>pubsubhubbub_publish (Gruntプラグイン)はGoogleが提供している<a href="https://pubsubhubbub.appspot.com/">PubSubHubbubハブ</a>へ指定したURLのフィードを<code>publish</code>するGruntプラグインです。</p>
       </section>
 
-      {{> google-adsense-ad-main}}
-
+      <section>
         <h1><a href="http://picks.hail2u.net/">Picks</a></h1>
 
         <figure>
