--- a/.grunt/html/shared/google-adsense-ad-main.mustache
+++ b/.grunt/html/shared/google-adsense-ad-main.mustache
@@ -1,4 +1,4 @@
-<aside class="adsense">
+<aside class="ads">
   <!-- Hail2u.net (Main) -->
   <ins class="adsbygoogle"
        style="display:block"
