Explain subscribe methods

--- a/.grunt/html/index.mustache
+++ b/.grunt/html/index.mustache
@@ -55,18 +55,16 @@
 
         {{#updates}}
           <ol>
-
-          {{#item}}
-            <li><time datetime="{{html5PubDate}}">{{strPubDate}}</time>
-              <a href="{{link}}">{{{title}}}</a></li>
-          {{/item}}
-
+            {{#item}}
+              <li><time datetime="{{html5PubDate}}">{{strPubDate}}</time>
+                <a href="{{link}}">{{{title}}}</a></li>
+            {{/item}}
           </ol>
         {{/updates}}
       </section>
 
-      <section id="follow-me">
-        <h1>フォロー</h1>
+      <section id="subscribe-links">
+        <h1>購読</h1>
 
         <ul class="follow">
           <li><a href="https://twitter.com/hail2unet"><img src="../../images/icon/twitter.min.svg" alt="Twitter"></a></li>
@@ -74,6 +72,8 @@
           <li><a href="http://u2liah.tumblr.com/"><img src="../../images/icon/tumblr.min.svg" alt="Tumblr"></a></li>
           <li><a rel="alternate" type="application/rss+xml" href="/feed"><img src="../../images/icon/feed.min.svg" alt="Feed"></a></li>
         </ul>
+
+        <p>このウェブサイトの更新情報は、以上のソーシャル・ネットワークやRSSフィードで購読することが出来ます。お好きな方法でぜひ購読してみてください。</p>
       </section>
     </main>
 
