--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -80,7 +80,7 @@
 
         <h2>製作に使っているツール</h2>
 
-        <ul>
+        <ul class="flat-ul">
           <li><a href="http://blosxom.sourceforge.net">Blosxom</a></li>
           <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
           <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
@@ -100,7 +100,7 @@
 
         <h2>ウェブサイト上で使っているツール</h2>
 
-        <ul>
+        <ul class="flat-ul">
           <li><a href="http://code.google.com/p/google-code-prettify/">Google Code Prettify</a></li>
           <li><a href="https://github.com/aFarkas/html5shiv">HTML5 Shiv</a></li>
           <li><a href="http://necolas.github.io/normalize.css/">Normalize.css</a></li>
