--- a/.grunt/html/index.mustache
+++ b/.grunt/html/index.mustache
@@ -66,7 +66,7 @@
       <section id="subscribe-links">
         <h1>購読</h1>
 
-        <ul class="follow">
+        <ul class="icon-list">
           <li><a href="https://twitter.com/hail2unet"><img src="../../images/icon/twitter.min.svg" alt="Twitter"></a></li>
           <li><a href="https://www.facebook.com/hail2u.net"><img src="../../images/icon/facebook.min.svg" alt="Facebook"></a></li>
           <li><a href="http://u2liah.tumblr.com/"><img src="../../images/icon/tumblr.min.svg" alt="Tumblr"></a></li>
