Markup "Logo" with `h1`

--- a/.grunt/html/shared/global-header.mustache
+++ b/.grunt/html/shared/global-header.mustache
@@ -1,8 +1,9 @@
 <header role="banner">
-  {{#home}}<mark><img src="{{site_logo}}" alt="{{site_title}}"></mark>{{/home}}
-  {{^home}}<a href="/"><img src="{{site_logo}}" alt="{{site_title}}"></a>{{/home}}
+  {{#home}}<h1><mark><img src="{{site_logo}}" alt="{{site_title}}"></mark></h1>{{/home}}
+  {{^home}}<h1><a href="/"><img src="{{site_logo}}" alt="{{site_title}}"></a></h1>{{/home}}
 
-  <h1>{{description}}</h1>
+  {{#weblog_child}}<?$permalink::is_permalink ne="1"><p class="tagline">{{description}}</p></?>{{/weblog_child}}
+  {{^weblog_child}}<p class="tagline">{{description}}</p>{{/weblog_child}}
 
   <nav>
     <ul>
