Write in 1 line as possible

--- a/.grunt/html/shared/global-footer.mustache
+++ b/.grunt/html/shared/global-footer.mustache
@@ -15,11 +15,6 @@
     </ul>
   </section>
 
-  {{#about}}
-    <p class="byline">Made by <mark>Kyo Nagashima</mark>.</p>
-  {{/about}}
-
-  {{^about}}
-    <p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a rel="author" href="/about/" itemprop="url">Kyo Nagashima</a></span>.</p>
-  {{/about}}
+  {{#about}}<p class="byline">Made by <mark>Kyo Nagashima</mark>.</p>{{/about}}
+  {{^about}}<p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a rel="author" href="/about/" itemprop="url">Kyo Nagashima</a></span>.</p>{{/about}}
 </footer>
