--- a/fonts/source-sans-pro.scss
+++ b/fonts/source-sans-pro.scss
@@ -10,6 +10,13 @@
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
+  font-weight: 200;
+  src: local("Source Sans Pro ExtraLight"), url("../fonts/source-sans-pro/xl.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: normal;
   font-weight: 300;
   src: local("Source Sans Pro Light"), url("../fonts/source-sans-pro/l.woff") format("woff");
 }
@@ -24,8 +31,29 @@
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
+  font-weight: 600;
+  src: local("Source Sans Pro SemiBold"), url("../fonts/source-sans-pro/sb.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: normal;
   font-weight: 700;
   src: local("Source Sans Pro Bold"), url("../fonts/source-sans-pro/b.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: normal;
+  font-weight: 900;
+  src: local("Source Sans Pro Black"), url("../fonts/source-sans-pro/bk.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: italic;
+  font-weight: 200;
+  src: local("Source Sans Pro ExtraLight Italic"), url("../fonts/source-sans-pro/xli.woff") format("woff");
 }
 
 @font-face {
@@ -46,5 +74,19 @@
   font-family: "Source Sans Pro";
   font-style: italic;
   font-weight: 700;
+  src: local("Source Sans Pro SemiBold Italic"), url("../fonts/source-sans-pro/sbi.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: italic;
+  font-weight: 700;
   src: local("Source Sans Pro Bold Italic"), url("../fonts/source-sans-pro/bi.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Source Sans Pro";
+  font-style: italic;
+  font-weight: 700;
+  src: local("Source Sans Pro Black Italic"), url("../fonts/source-sans-pro/bki.woff") format("woff");
 }
