Split latest-article and recent-articles

--- a/.grunt/html/index.mustache
+++ b/.grunt/html/index.mustache
@@ -17,8 +17,8 @@
     {{> global-header}}
 
     <main role="main">
-      <section id="recent-articles" class="topic post-list">
-        {{#articles}}
+      {{#articles}}
+	<section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}">
               <h1>{{{title}}}</h1>
@@ -32,9 +32,11 @@
               <p>{{{description}}}</p>
             </a>
           {{/first}}
+	</section>
 
-          <hr>
+	{{> google-adsense-ad-main}}
 
+	<section id="recent-articles" class="post-list">
           <ol>
             {{#item}}
               <li><time datetime="{{html5PubDate}}">{{strPubDate}}</time>
@@ -45,10 +47,8 @@
           <nav class="seemore">
             <p><a href="/blog/">More articles</a></p>
           </nav>
-        {{/articles}}
-      </section>
-
-      {{> google-adsense-ad-main}}
+	</section>
+      {{/articles}}
 
       <section id="recent-updates" class="post-list">
         <h1>お知らせ</h1>
