Strip "Posted " for minimality

--- a/.grunt/html/index.mustache
+++ b/.grunt/html/index.mustache
@@ -24,7 +24,8 @@
               <h1>{{{title}}}</h1>
 
               <footer>
-                <p>Posted on <time datetime="{{html5PubDate}}">{{strPubDate}}</time> under <span class="tag">{{category}}</span></p>
+		<p>on <time datetime="{{html5PubDate}}">{{strPubDate}}</time>
+		  under <span class="tag">{{category}}</span></p>
               </footer>
 
               {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
