Add section footer

--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -20,6 +20,10 @@
       <section id="website">
         <h1>このウェブサイトについて</h1>
 
+	<footer>
+	  <p>Informations, for humans.</p>
+	</footer>
+
         <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録を、ウェブサイトの制作周りの話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
 
         <p>時々長期にわたって更新が止まりますが、そういう時はほぼ何かしらのゲームにはまってる時です。</p>
