--- a/.grunt/html/blog/index.mustache
+++ b/.grunt/html/blog/index.mustache
@@ -22,6 +22,10 @@
           <section id="on-{{year}}" class="post-list">
             <h1>{{year}}</h1>
 
+            <footer>
+              <p>What I was thinking on</p>
+            </footer>
+
             <ol>
         {{/isFirstInYear}}
 
