--- a/.grunt/html/documents/index.mustache
+++ b/.grunt/html/documents/index.mustache
@@ -20,6 +20,10 @@
       <section>
         <h1><a href="/documents/sass-guide-ja.html">Sassの基本</a></h1>
 
+	<footer>
+	  <p>Sass, syntactically awesome style sheets.</p>
+	</footer>
+
         <p><a href="http://sass-lang.com/">Sass</a>がリニューアルされ、このサイトに訳を載せていたチュートリアルが消え、代わりに<a href="http://sass-lang.com/guide">Sass Basics</a>になりました。内容的にはあまり変わらないか多少薄くなっていますが、<code>@extend</code>への言及も追加されたので、日本語訳を作成しました。</p>
       </section>
 
