--- a/.grunt/html/shared/global-header.mustache
+++ b/.grunt/html/shared/global-header.mustache
@@ -2,8 +2,8 @@
   {{#home}}<h1><mark><img src="{{site_logo}}" alt="{{site_title}}"></mark></h1>{{/home}}
   {{^home}}<h1><a href="/"><img src="{{site_logo}}" alt="{{site_title}}"></a></h1>{{/home}}
 
-  {{#weblog_child}}<?$permalink::is_permalink ne="1"><p class="tagline">{{tagline}}</p></?>{{/weblog_child}}
-  {{^weblog_child}}<p class="tagline">{{tagline}}</p>{{/weblog_child}}
+  {{#weblog_child}}<?$permalink::is_permalink ne="1"><p class="tagline">{{{tagline}}}</p></?>{{/weblog_child}}
+  {{^weblog_child}}<p class="tagline">{{{tagline}}}</p>{{/weblog_child}}
 
   <nav>
     <ul>
