--- a/fonts/source-serif-pro.css
+++ b/fonts/source-serif-pro.css
@@ -15,5 +15,10 @@
 @font-face {
   font-family: "Source Serif Pro";
   font-style: normal;
+  font-weight: 600;
+  src: local("Source Serif Pro SemiBold"), url("../fonts/source-serif-pro/b.woff") format("woff"); }
+@font-face {
+  font-family: "Source Serif Pro";
+  font-style: normal;
   font-weight: 700;
   src: local("Source Serif Pro Bold"), url("../fonts/source-serif-pro/b.woff") format("woff"); }
