--- a/fonts/source-serif-pro.scss
+++ b/fonts/source-serif-pro.scss
@@ -17,6 +17,13 @@
 @font-face {
   font-family: "Source Serif Pro";
   font-style: normal;
+  font-weight: 600;
+  src: local("Source Serif Pro SemiBold"), url("../fonts/source-serif-pro/b.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Source Serif Pro";
+  font-style: normal;
   font-weight: 700;
   src: local("Source Serif Pro Bold"), url("../fonts/source-serif-pro/b.woff") format("woff");
 }
