Update section footers

--- a/.grunt/html/about/index.mustache
+++ b/.grunt/html/about/index.mustache
@@ -20,9 +20,9 @@
       <section id="website">
         <h1>このウェブサイトについて</h1>
 
-	<footer>
-	  <p>Informations, for humans.</p>
-	</footer>
+        <footer>
+          <p>Informations, for humans.</p>
+        </footer>
 
         <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録を、ウェブサイトの制作周りの話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
 
@@ -57,6 +57,10 @@
 
         <h1><span itemprop="name">Kyo Nagashima</span>について</h1>
 
+        <footer>
+          <p>Who.</p>
+        </footer>
+
         <figure>
           <img src="http://www.gravatar.com/avatar/38b5f9f7d2faa315ec10866e18fc3bd7.png?s=320" alt="This Is the End" itemprop="image">
         </figure>
@@ -79,6 +83,10 @@
 
       <section id="colophon">
         <h1>奥付け</h1>
+
+        <footer>
+          <p>Tools and technologies used on this website.</p>
+        </footer>
 
         <p>その他、ウェブページの構成やツール、プライバシーについては以下を参照してください。</p>
 
@@ -128,6 +136,10 @@
 
       <section id="contact">
         <h1>問い合わせ</h1>
+
+        <footer>
+          <p>Yo.</p>
+        </footer>
 
         <p>僕やこのWebサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
 
