--- a/.grunt/html/index.mustache
+++ b/.grunt/html/index.mustache
@@ -18,14 +18,14 @@
 
     <main role="main">
       {{#articles}}
-	<section id="latest-article" class="topic">
+        <section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}">
               <h1>{{{title}}}</h1>
 
               <footer>
-		<p>on <time datetime="{{html5PubDate}}">{{strPubDate}}</time>
-		  under <span class="tag">{{category}}</span></p>
+                <p>on <time datetime="{{html5PubDate}}">{{strPubDate}}</time>
+                  under <span class="tag">{{category}}</span></p>
               </footer>
 
               {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
@@ -33,11 +33,11 @@
               <p>{{{description}}}</p>
             </a>
           {{/first}}
-	</section>
+        </section>
 
-	{{> google-adsense-ad-main}}
+        {{> google-adsense-ad-main}}
 
-	<section id="recent-articles" class="post-list">
+        <section id="recent-articles" class="post-list">
           <ol>
             {{#item}}
               <li><time datetime="{{html5PubDate}}">{{strPubDate}}</time>
@@ -48,11 +48,15 @@
           <nav class="seemore">
             <p><a href="/blog/">More articles</a></p>
           </nav>
-	</section>
+        </section>
       {{/articles}}
 
       <section id="recent-updates" class="post-list">
         <h1>お知らせ</h1>
+
+        <footer>
+          <p>Updates other than weblog.</p>
+        </footer>
 
         {{#updates}}
           <ol>
@@ -66,6 +70,10 @@
 
       <section id="subscribe-links">
         <h1>購読</h1>
+
+        <footer>
+          <p>Follow this website.</p>
+        </footer>
 
         <ul class="icon-list">
           <li><a href="https://twitter.com/hail2unet"><img src="../../images/icon/twitter.min.svg" alt="Twitter"></a></li>
