Update weblog theme

--- a/.grunt/html/blog/index.mustache
+++ b/.grunt/html/blog/index.mustache
@@ -20,10 +20,10 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="post-list">
-            <h1>{{year}}</h1>
+            <h1>Articles on {{year}}</h1>
 
             <footer>
-              <p>What I was thinking on</p>
+              <p>What I was thinking on {{year}}.</p>
             </footer>
 
             <ol>
