--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -54,6 +54,10 @@
         <section class="post-list">
           <h1>Articles under $categories::title</h1>
 
+          <footer>
+            <p>What I wrote about “$categories::title”.</p>
+          </footer>
+
           <ol>
       </?>
 
