Add index links by category to weblog

--- a/.grunt/html/blog/index.mustache
+++ b/.grunt/html/blog/index.mustache
@@ -17,6 +17,31 @@
     {{> global-header}}
 
     <main role="main">
+      <section id="by-category">
+        <h1>カテゴリ別</h1>
+
+        <footer>
+          <p>Organized by categories.</p>
+        </footer>
+
+        <ul class="flat-ul">
+          <li><a href="./blog/">Blog</a></li>
+          <li><a href="./blosxom/">Blosxom</a></li>
+          <li><a href="./coding/">Coding</a></li>
+          <li><a href="./gadget/">Gadget</a></li>
+          <li><a href="./game/">Game</a></li>
+          <li><a href="./internet/">Internet</a></li>
+          <li><a href="./media/">Media</a></li>
+          <li><a href="./misc/">Miscellaneous</a></li>
+          <li><a href="./rss/">RSS</a></li>
+          <li><a href="./software/">Software</a></li>
+          <li><a href="./sports/">Sports</a></li>
+          <li><a href="./webdesign/">Web Deign</a></li>
+        </ul>
+      </section>
+
+      {{> google-adsense-ad-main}}
+
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="post-list">
@@ -36,10 +61,6 @@
             </ol>
           </section>
         {{/isLastInYear}}
-
-        {{#isLastInLatestYear}}
-          {{> google-adsense-ad-main}}
-        {{/isLastInLatestYear}}
       {{/articles}}
     </main>
 
