Support large summary Twitter card correctly

--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -37,7 +37,7 @@
     <meta property="og:site_name" content="{{site_title}}">
     <meta prefix="fb: http://ogp.me/ns/fb#" property="fb:admins" content="100000022521341">
 
-    <meta name="twitter:card" content="summary<?$categories::enabled eq="1">_large_image</?>">
+    <meta name="twitter:card" content="$utils::card_type">
     <meta name="twitter:creator" content="@hail2u_">
 
     {{> styles}}
