Use generic path for iOS icon

--- a/.grunt/html/shared/links.mustache
+++ b/.grunt/html/shared/links.mustache
@@ -4,4 +4,4 @@
 <link rel="license" href="{{license_url}}">
 
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="apple-touch-icon" type="image/png" href="/images/favicon-152.png">
+<link rel="apple-touch-icon" type="image/png" href="/apple-touch-icon.png">
