Use website Twitter account

--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -38,7 +38,7 @@
     <meta prefix="fb: http://ogp.me/ns/fb#" property="fb:admins" content="100000022521341">
 
     <meta name="twitter:card" content="$utils::card_type">
-    <meta name="twitter:creator" content="@hail2u_">
+    <meta name="twitter:creator" content="@hail2unet">
 
     {{> styles}}
     {{> scripts-head}}
