--- a/.grunt/html/shared/structured-data.mustache
+++ b/.grunt/html/shared/structured-data.mustache
@@ -13,4 +13,4 @@
 <meta content="100000022521341" prefix="fb: http://ogp.me/ns/fb#" property="fb:admins">
 
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:creator" content="@hail2u_">
+<meta name="twitter:creator" content="@hail2unet">
