--- a/.grunt/html/shared/scripts-head.mustache
+++ b/.grunt/html/shared/scripts-head.mustache
@@ -1,1 +1,2 @@
+<script defer src="/scripts/{{script}}.min.js"></script>
 <!--[if lt IE 9]><script src="/scripts/html5shiv.min.js"></script><![endif]-->
