--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -98,7 +98,7 @@
     </main>
 
     {{> global-footer}}
-    {{> scripts}}
+    {{> scripts-foot}}
   </body>
 </html>
 <!-- DEBUG: $utils::debug -->
