--- a/.grunt/html/blog/index.mustache
+++ b/.grunt/html/blog/index.mustache
@@ -36,7 +36,7 @@
           <li><a href="./rss/">RSS</a></li>
           <li><a href="./software/">Software</a></li>
           <li><a href="./sports/">Sports</a></li>
-          <li><a href="./webdesign/">Web Deign</a></li>
+          <li><a href="./webdesign/">Web Design</a></li>
         </ul>
       </section>
 
