Fix and rebuild web font (S)CSS

--- a/fonts/megrim.css
+++ b/fonts/megrim.css
@@ -7,5 +7,6 @@
  */
 @font-face {
   font-family: "Megrim";
-  font-style: italic;
-  src: url("../fonts/megrim/megrim-26.woff") format("woff"); }
+  font-style: normal;
+  font-weight: 400;
+  src: url("./megrim/megrim-26.woff") format("woff"); }
