--- a/fonts/source-code-pro.css
+++ b/fonts/source-code-pro.css
@@ -11,34 +11,34 @@
   font-family: "Source Code Pro";
   font-style: normal;
   font-weight: 200;
-  src: local("Source Code Pro ExtraLight"), url("../fonts/source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro ExtraLight"), url("./source-code-pro/r.woff") format("woff"); }
 @font-face {
   font-family: "Source Code Pro";
   font-style: normal;
   font-weight: 300;
-  src: local("Source Code Pro Light"), url("../fonts/source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro Light"), url("./source-code-pro/r.woff") format("woff"); }
 @font-face {
   font-family: "Source Code Pro";
   font-style: normal;
   font-weight: 400;
-  src: local("Source Code Pro"), url("../fonts/source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro"), url("./source-code-pro/r.woff") format("woff"); }
 @font-face {
   font-family: "Source Code Pro";
   font-style: normal;
   font-weight: 500;
-  src: local("Source Code Pro Medium"), url("../fonts/source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro Medium"), url("./source-code-pro/r.woff") format("woff"); }
 @font-face {
   font-family: "Source Code Pro";
   font-style: normal;
   font-weight: 600;
-  src: local("Source Code Pro SemiBold"), url("../fonts/source-code-pro/r.woff") format("woff"); }
+  src: local("Source Code Pro SemiBold"), url("./source-code-pro/r.woff") format("woff"); }
 @font-face {
   font-family: "Source Code Pro";
   font-style: normal;
   font-weight: 700;
-  src: local("Source Code Pro Bold"), url("../fonts/source-code-pro/b.woff") format("woff"); }
+  src: local("Source Code Pro Bold"), url("./source-code-pro/b.woff") format("woff"); }
 @font-face {
   font-family: "Source Code Pro";
   font-style: normal;
   font-weight: 900;
-  src: local("Source Code Pro Black"), url("../fonts/source-code-pro/b.woff") format("woff"); }
+  src: local("Source Code Pro Black"), url("./source-code-pro/b.woff") format("woff"); }
