--- a/fonts/source-sans-pro.css
+++ b/fonts/source-sans-pro.css
@@ -11,59 +11,59 @@
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 200;
-  src: local("Source Sans Pro ExtraLight"), url("../fonts/source-sans-pro/xl.woff") format("woff"); }
+  src: local("Source Sans Pro ExtraLight"), url("./source-sans-pro/xl.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 300;
-  src: local("Source Sans Pro Light"), url("../fonts/source-sans-pro/l.woff") format("woff"); }
+  src: local("Source Sans Pro Light"), url("./source-sans-pro/l.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 400;
-  src: local("Source Sans Pro"), url("../fonts/source-sans-pro/r.woff") format("woff"); }
+  src: local("Source Sans Pro"), url("./source-sans-pro/r.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 600;
-  src: local("Source Sans Pro SemiBold"), url("../fonts/source-sans-pro/sb.woff") format("woff"); }
+  src: local("Source Sans Pro SemiBold"), url("./source-sans-pro/sb.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 700;
-  src: local("Source Sans Pro Bold"), url("../fonts/source-sans-pro/b.woff") format("woff"); }
+  src: local("Source Sans Pro Bold"), url("./source-sans-pro/b.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 900;
-  src: local("Source Sans Pro Black"), url("../fonts/source-sans-pro/bk.woff") format("woff"); }
+  src: local("Source Sans Pro Black"), url("./source-sans-pro/bk.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: italic;
   font-weight: 200;
-  src: local("Source Sans Pro ExtraLight Italic"), url("../fonts/source-sans-pro/xli.woff") format("woff"); }
+  src: local("Source Sans Pro ExtraLight Italic"), url("./source-sans-pro/xli.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: italic;
   font-weight: 300;
-  src: local("Source Sans Pro Light Italic"), url("../fonts/source-sans-pro/li.woff") format("woff"); }
+  src: local("Source Sans Pro Light Italic"), url("./source-sans-pro/li.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: italic;
   font-weight: 400;
-  src: local("Source Sans Pro Italic"), url("../fonts/source-sans-pro/ri.woff") format("woff"); }
+  src: local("Source Sans Pro Italic"), url("./source-sans-pro/ri.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: italic;
   font-weight: 600;
-  src: local("Source Sans Pro SemiBold Italic"), url("../fonts/source-sans-pro/sbi.woff") format("woff"); }
+  src: local("Source Sans Pro SemiBold Italic"), url("./source-sans-pro/sbi.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: italic;
   font-weight: 700;
-  src: local("Source Sans Pro Bold Italic"), url("../fonts/source-sans-pro/bi.woff") format("woff"); }
+  src: local("Source Sans Pro Bold Italic"), url("./source-sans-pro/bi.woff") format("woff"); }
 @font-face {
   font-family: "Source Sans Pro";
   font-style: italic;
   font-weight: 900;
-  src: local("Source Sans Pro Black Italic"), url("../fonts/source-sans-pro/bki.woff") format("woff"); }
+  src: local("Source Sans Pro Black Italic"), url("./source-sans-pro/bki.woff") format("woff"); }
