--- a/.grunt/html/documents/index.mustache
+++ b/.grunt/html/documents/index.mustache
@@ -8,7 +8,7 @@
     {{> links}}
     {{> structured-data}}
     {{> styles}}
-    {{> scripts-head}}
+    {{> scripts--head}}
   </head>
 
   <body>
@@ -25,7 +25,7 @@
         <p><a href="http://sass-lang.com/">Sass</a>がリニューアルされ、このサイトに訳を載せていたチュートリアルが消え、代わりに<a href="http://sass-lang.com/guide">Sass Basics</a>になりました。内容的にはあまり変わらないか多少薄くなっていますが、<code>@extend</code>への言及も追加されたので、日本語訳を作成しました。</p>
       </section>
 
-      {{> google-adsense-ad-main}}
+      {{> google-adsense__ad-main}}
 
       <section>
         <h1><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></h1>
@@ -221,6 +221,6 @@
     </main>
 
     {{> global-footer}}
-    {{> scripts-foot}}
+    {{> scripts--foot}}
   </body>
 </html>
