--- a/.grunt/html/index.mustache
+++ b/.grunt/html/index.mustache
@@ -8,7 +8,7 @@
     {{> links}}
     {{> structured-data}}
     {{> styles}}
-    {{> scripts-head}}
+    {{> scripts--head}}
   </head>
 
   <body>
@@ -33,7 +33,7 @@
           {{/first}}
         </section>
 
-        {{> google-adsense-ad-main}}
+        {{> google-adsense__ad-main}}
 
         <section id="recent-articles" class="post-list">
           <ol>
@@ -85,6 +85,6 @@
     </main>
 
     {{> global-footer}}
-    {{> scripts-foot}}
+    {{> scripts--foot}}
   </body>
 </html>
