--- a/.grunt/html/projects/index.mustache
+++ b/.grunt/html/projects/index.mustache
@@ -8,7 +8,7 @@
     {{> links}}
     {{> structured-data}}
     {{> styles}}
-    {{> scripts-head}}
+    {{> scripts--head}}
   </head>
 
   <body>
@@ -25,7 +25,7 @@
         <p>rsync-ac (Gruntプラグイン)は<a href="http://rsync.samba.org/">rsync</a>を使って他のディレクトリへファイルをコピーするGruntプラグインです。オプション設定を絞ることであまり考えずに使えるようにしました。</p>
       </section>
 
-      {{> google-adsense-ad-main}}
+      {{> google-adsense__ad-main}}
 
       <section>
         <h1><a href="https://github.com/hail2u/grunt-pubsubhubbub_publish">pubsubhubbub_publish (Gruntプラグイン)</a></h1>
@@ -338,6 +338,6 @@
     </main>
 
     {{> global-footer}}
-    {{> scripts-foot}}
+    {{> scripts--foot}}
   </body>
 </html>
