--- a/.grunt/html/blog/index.mustache
+++ b/.grunt/html/blog/index.mustache
@@ -8,7 +8,7 @@
     {{> links}}
     {{> structured-data}}
     {{> styles}}
-    {{> scripts-head}}
+    {{> scripts--head}}
   </head>
 
   <body>
@@ -38,7 +38,7 @@
         </ul>
       </section>
 
-      {{> google-adsense-ad-main}}
+      {{> google-adsense__ad-main}}
 
       {{#articles}}
         {{#isFirstInYear}}
@@ -63,6 +63,6 @@
     </main>
 
     {{> global-footer}}
-    {{> scripts-foot}}
+    {{> scripts--foot}}
   </body>
 </html>
