--- a/.grunt/html/blog/theme.mustache
+++ b/.grunt/html/blog/theme.mustache
@@ -41,7 +41,7 @@
     <meta name="twitter:creator" content="@hail2unet">
 
     {{> styles}}
-    {{> scripts-head}}
+    {{> scripts--head}}
   </head>
 
   <body<?$permalink::is_permalink eq="1"> class="permalink"</?>>
@@ -77,7 +77,7 @@
       </article>
 
       <?$story_counter::count eq="1">
-        {{> google-adsense-ad-main}}
+        {{> google-adsense__ad-main}}
       </?>
 
       <?$back_and_forth::enabled eq="1">
@@ -91,12 +91,12 @@
           </ol>
         </section>
 
-        {{> google-adsense-ad-main}}
+        {{> google-adsense__ad-main}}
       </?>
     </main>
 
     {{> global-footer}}
-    {{> scripts-foot}}
+    {{> scripts--foot}}
   </body>
 </html>
 <!-- DEBUG: $utils::debug -->
