Load scripts asynchronously

--- a/src/html/shared/scripts--head.mustache
+++ b/src/html/shared/scripts--head.mustache
@@ -1,4 +1,4 @@
-<script defer src="/scripts/{{script}}.min.js"></script>
+<script async src="/scripts/{{script}}.min.js"></script>
 
 <!-- Google Analytics -->
 <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
