--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -4,11 +4,11 @@
 <!DOCTYPE html>
 <html lang="$blog_language" itemscope itemtype="http://schema.org/<?$permalink::is_permalink ne="1">Blog</?><?$permalink::is_permalink eq="1">BlogPosting</?>">
   <head>
-    {{> metas}}
+    {{> meta}}
 
     <title>$categories::title$categories::title_sep$permalink::title$permalink::title_sep$blog_title - {{site_title}}</title>
 
-    {{> links}}
+    {{> link}}
     $back_and_forth::link_prev
 
     <?$permalink::is_permalink ne="1">
@@ -40,8 +40,8 @@
     <meta name="twitter:card" content="$utils::card_type">
     <meta name="twitter:creator" content="@hail2unet">
 
-    {{> styles}}
-    {{> scripts--head}}
+    {{> style}}
+    {{> script}}
   </head>
 
   <body<?$permalink::is_permalink eq="1"> class="permalink"</?>>
@@ -96,7 +96,6 @@
     </main>
 
     {{> global-footer}}
-    {{> scripts--foot}}
   </body>
 </html>
 <!-- DEBUG: $utils::debug -->
