--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja-JP" itemscope itemtype="http://schema.org/WebPage">
   <head>
-    {{> metas}}
+    {{> meta}}
 
     <title itemprop="name">{{site_title}}</title>
 
-    {{> links}}
+    {{> link}}
     {{> structured-data}}
-    {{> styles}}
-    {{> scripts--head}}
+    {{> style}}
+    {{> script}}
   </head>
 
   <body>
@@ -85,6 +85,5 @@
     </main>
 
     {{> global-footer}}
-    {{> scripts--foot}}
   </body>
 </html>
