Add `role` attribute correctly

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -47,7 +47,7 @@
   <body<?$permalink::is_permalink eq="1"> class="permalink"</?>>
     {{> global-header}}
 
-    <main>
+    <main<?$permalink::is_permalink ne="1"> role="main"</?>>
       <?$categories::enabled eq="1">
         <section class="post-list">
           <h1>Articles under $categories::title</h1>
@@ -62,7 +62,7 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <article>
+      <article<?$permalink::is_permalink eq="1"> role="main"</?>>
         <?$utils::has_image ne="1"><meta content="{{image}}" itemprop="image"></?>
         <link href="$url$path/$fn.$default_flavour" itemprop="url">
 
