Use `$permalink::class` flavour variable

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -44,7 +44,7 @@
     {{> script}}
   </head>
 
-  <body<?$permalink::is_permalink eq="1"> class="permalink"</?>>
+  <body<?$permalink::is_permalink eq="1"> class="$permalink::class"</?>>
     {{> global-header}}
 
     <main<?$permalink::is_permalink ne="1"> role="main"</?>>
