--- a/src/html/shared/google-cse.mustache
+++ b/src/html/shared/google-cse.mustache
@@ -1,7 +1,8 @@
 <!-- Google Custom Search Engine -->
-<form class="searchbox" action="http://www.google.com/cse">
+<form class="searchbox" action="http://www.google.com/cse" itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction">
+  <meta content="https://www.google.com/cse?cx=partner-pub-8712792805045949:3747342316&amp;ie=UTF-8&amp;q={q}&amp;sa=Search" itemprop="target">
   <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
   <input type="hidden" name="ie" value="UTF-8">
-  <input type="search" name="q" size="32">
+  <input type="search" name="q" size="32" itemprop="query-input">
   <input type="submit" name="sa" value="Search">
 </form>
