--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -138,12 +138,12 @@
           <p>Yo.</p>
         </footer>
 
-        <p>僕やこのWebサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
+        <p>このWebサイト内のコンテンツについて、報告や問い合わせ・クレーム等がある場合は以下のいずれかの手段で連絡してください。</p>
 
         <ul>
-          <li><a href="https://twitter.com/hail2u_">Twitterでの@ツイート</a></li>
-          <li><a href="https://www.facebook.com/hail2u">Facebookでのメッセージ</a></li>
-          <li><a href="https://plus.google.com/+KyoNagashima">Google+でのハングアウト</a></li>
+          <li><a href="https://twitter.com/hail2unet">Twitterでの@ツイート</a></li>
+          <li><a href="https://www.facebook.com/hail2u.net">Facebookでのメッセージ</a></li>
+          <li><a href="https://plus.google.com/+Hail2unet">Google+でのハングアウト</a></li>
           <li><a href="mailto:kyo@hail2u.net">kyo@hail2u.net宛てのメール</a></li>
           <li><a href="https://hail2u.wufoo.com/forms/feedback/">フィードバック・フォームでのメッセージ</a></li>
         </ul>
