--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -26,7 +26,7 @@
                   under <span class="tag">{{category}}</span></p>
               </footer>
 
-              {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
+              {{#hasImage}}<figure class="full-width">{{{image}}}</figure>{{/hasImage}}
 
               <p>{{{description}}}</p>
             </a>
