Add `article:author` to every article pages

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -19,23 +19,24 @@
     </?>
 
     <?$permalink::is_permalink ne="1">
-      <meta property="og:title" content="$categories::title$categories::title_sep$blog_title - {{site_title}}">
-      <meta property="og:type" content="{{type}}">
-      <meta property="og:description" content="{{description}}">
-      <meta property="og:image" content="{{image}}">
+      <meta content="$categories::title$categories::title_sep$blog_title - {{site_title}}" property="og:title">
+      <meta content="{{type}}" property="og:type">
+      <meta content="{{description}}" property="og:description">
+      <meta content="{{image}}" property="og:image">
     </?>
 
     <?$permalink::is_permalink eq="1">
-      <meta property="og:title" content="$permalink::title">
-      <meta property="og:type" content="article">
-      <meta property="og:description" content="$permalink::description">
-      <meta property="og:image" content="$utils::ogp_image">
+      <meta content="$permalink::title" property="og:title">
+      <meta content="article" property="og:type">
+      <meta content="$permalink::description" property="og:description">
+      <meta content="$utils::ogp_image" property="og:image">
+      <meta content="https://www.facebook.com/hail2u" prefix="article: http://ogp.me/ns/article#" property="article:author">
     </?>
 
-    <meta property="og:url" content="$utils::canonical">
-    <meta property="og:locale" content="ja_JP">
-    <meta property="og:site_name" content="{{site_title}}">
-    <meta prefix="fb: http://ogp.me/ns/fb#" property="fb:admins" content="100000022521341">
+    <meta content="$utils::canonical" property="og:url">
+    <meta content="ja_JP" property="og:locale">
+    <meta content="{{site_title}}" property="og:site_name">
+    <meta content="100000022521341" prefix="fb: http://ogp.me/ns/fb#" property="fb:admins">
 
     <meta name="twitter:card" content="$utils::card_type">
     <meta name="twitter:creator" content="@hail2unet">
