--- a/src/html/shared/global-footer.mustache
+++ b/src/html/shared/global-footer.mustache
@@ -1,17 +1,8 @@
 <footer role="contentinfo">
   <section class="footlinks">
     <ul>
-      <li><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a></li>
-
-      {{#weblog}}
-        <li><a type="application/rss+xml" href="/feed">Home RSS</a></li>
-        <li><a rel="alternate" type="application/rss+xml" href="/blog/feed">Weblog RSS</a></li>
-      {{/weblog}}
-
-      {{^weblog}}
-        <li><a rel="alternate" type="application/rss+xml" href="/feed">Home RSS</a></li>
-        <li><a type="application/rss+xml" href="/blog/feed">Weblog RSS</a></li>
-      {{/weblog}}
+      <li><a rel="license" href="{{license_url}}">CC BY-NC</a></li>
+      <li><a rel="alternate" type="application/rss+xml" href="{{feed_url}}">RSS</a></li>
     </ul>
   </section>
 
