--- a/src/html/search/index.mustache
+++ b/src/html/search/index.mustache
@@ -15,7 +15,7 @@
     {{> global-header}}
 
     <main role="main">
-      <section itemscope itemtype="http://schema.org/WebSite">
+      <section role="search" itemscope itemtype="http://schema.org/WebSite">
         <meta itemprop="url" content="http://hail2u.net/">
 
         <h1>このウェブサイト全体から検索する</h1>
@@ -25,7 +25,7 @@
         </footer>
 
         <!-- Google Custom Search Engine -->
-        <form class="searchbox" action="http://www.google.com/cse" role="search" itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction">
+        <form class="searchbox" action="http://www.google.com/cse" itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction">
           <meta content="https://www.google.com/cse?cx=partner-pub-8712792805045949:3747342316&amp;ie=UTF-8&amp;q={q}&amp;sa=Search" itemprop="target">
           <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
           <input type="hidden" name="ie" value="UTF-8">
