Add popular page list to "Search" page

--- a/src/html/search/index.mustache
+++ b/src/html/search/index.mustache
@@ -15,9 +15,7 @@
     {{> global-header}}
 
     <main role="main">
-      <section role="search" itemscope itemtype="http://schema.org/WebSite">
-        <meta itemprop="url" content="http://hail2u.net/">
-
+      <section role="search">
         <h1>このウェブサイト全体から検索する</h1>
 
         <footer>
@@ -25,18 +23,25 @@
         </footer>
 
         <!-- Google Custom Search Engine -->
-        <form class="searchbox" action="http://www.google.com/cse" itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction">
-          <meta content="https://www.google.com/cse?cx=partner-pub-8712792805045949:3747342316&amp;ie=UTF-8&amp;q={q}&amp;sa=Search" itemprop="target">
+        <form class="searchbox" action="http://www.google.com/cse">
           <input type="hidden" name="cx" value="partner-pub-8712792805045949:3747342316">
           <input type="hidden" name="ie" value="UTF-8">
-          <input type="search" name="q" size="32" itemprop="query-input">
+          <input type="search" name="q" size="32">
           <input type="submit" name="sa" value="Search">
         </form>
       </section>
 
       {{> google-adsense__ad-main}}
+
+      <section id="popular-pages">
+        <h1>人気のあるページ</h1>
+
+        <p>JavaScriptを有効にしている環境の場合、ここに<a href="http://b.hatena.ne.jp/">はてなブックマーク</a>で人気のあるこのウェブサイトのページのトップ10が表示されます。</p>
+      </section>
+      <script src="/scripts/search.min.js"></script>
     </main>
 
     {{> global-footer}}
+
   </body>
 </html>
