--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -16,6 +16,18 @@
 
     <main role="main">
       <section>
+        <h1><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></h1>
+
+        <footer>
+          <p>The All-inclusive Guide?</p>
+        </footer>
+
+        <p><a href="http://www.smashingmagazine.com/2013/05/17/typographic-design-patterns-practices-case-study-2013/">Smashing Magazineによるウェブサイトのタイポグラフィーについての調査</a>をわかりやすくまとめた<a href="http://bootstrapbay.com/blog/web-typography-best-practices/">The All-Inclusive Guide to Web Typography Best Practices</a>の日本語訳です。ベスト・プラクティスになりうる部分のみコンパクトに抽出された参考になる文書だと思います。</p>
+      </section>
+
+      {{> google-adsense__ad-main}}
+
+      <section>
         <h1><a href="/documents/sass-guide-ja.html">Sassの基本</a></h1>
 
         <footer>
@@ -24,8 +36,6 @@
 
         <p><a href="http://sass-lang.com/">Sass</a>がリニューアルされ、このサイトに訳を載せていたチュートリアルが消え、代わりに<a href="http://sass-lang.com/guide">Sass Basics</a>になりました。内容的にはあまり変わらないか多少薄くなっていますが、<code>@extend</code>への言及も追加されたので、日本語訳を作成しました。</p>
       </section>
-
-      {{> google-adsense__ad-main}}
 
       <section>
         <h1><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></h1>
