--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -45,7 +45,7 @@
     {{> script}}
   </head>
 
-  <body<?$permalink::is_permalink eq="1"> class="$permalink::class"</?>>
+  <body<?$permalink::is_permalink eq="1"> class="permalink"</?>>
     {{> global-header}}
 
     <main<?$permalink::is_permalink ne="1"> role="main"</?>>
