--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /*!
- * style.css v6.59.6
+ * style.css v6.59.7
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -406,6 +406,12 @@ pre {
   -webkit-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   -moz-font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1; }
+  @media (min-width: 39.118rem) {
+    pre {
+      overflow-x: visible;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      overflow-wrap: break-word; } }
 
 blockquote {
   margin: 0;
