Rename Megrim subset font

--- a/fonts/megrim.css
+++ b/fonts/megrim.css
@@ -9,4 +9,4 @@
   font-family: "Megrim";
   font-style: normal;
   font-weight: 400;
-  src: url("./megrim/megrim-26.woff") format("woff"); }
+  src: url("./megrim/r-26.woff") format("woff"); }
