--- a/fonts/megrim.scss
+++ b/fonts/megrim.scss
@@ -9,5 +9,5 @@
   font-family: "Megrim";
   font-style: normal;
   font-weight: 400;
-  src: url("./megrim/megrim-26.woff") format("woff");
+  src: url("./megrim/r-26.woff") format("woff");
 }
