--- a/src/html/shared/script.mustache
+++ b/src/html/shared/script.mustache
@@ -1,4 +1,5 @@
 <script async src="/scripts/{{script}}.min.js"></script>
+{{#search}}<script async src="/scripts/search.min.js"></script>{{/search}}
 
 <!-- Google Analytics -->
 <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
