--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -67,7 +67,7 @@
 
         <p>インターネットでは<em itemprop="additionalName">hail2u</em>または<em itemprop="additionalName">kyo</em>というニックネームで活動していることが多いですが、<em itemprop="additionalName">h2u</em>や<em itemprop="additionalName">hail2u_</em>等でも活動することもあります。</p>
 
-        <ul>
+        <ul class="flat-ul">
           <li><a rel="me" href="https://twitter.com/hail2u_">Twitter</a></li>
           <li><a rel="me" href="https://www.facebook.com/hail2u">Facebook</a></li>
           <li><a rel="me" href="https://plus.google.com/+KyoNagashima">Google+</a></li>
