--- a/src/html/partial/script.mustache
+++ b/src/html/partial/script.mustache
@@ -1,7 +1,7 @@
 <script async src="/scripts/{{script}}.min.js"></script>
 {{#search}}<script async src="/scripts/search.min.js"></script>{{/search}}
 
-<!-- Google Analytics -->
+<!-- Google AdSense -->
 <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <!-- Google Analytics -->
