--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -40,7 +40,8 @@
     <meta content="100000022521341" prefix="fb: http://ogp.me/ns/fb#" property="fb:admins">
 
     <meta name="twitter:card" content="$utils::card_type">
-    <meta name="twitter:creator" content="@hail2unet">
+    <meta name="twitter:site" content="@hail2unet">
+    <meta name="twitter:creator" content="@hail2u_">
 
     {{> style}}
 
