--- a/src/html/partial/script.mustache
+++ b/src/html/partial/script.mustache
@@ -2,7 +2,7 @@
 {{#search}}<script async src="/scripts/search.min.js"></script>{{/search}}
 
 <!-- Google AdSense -->
-<script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <!-- Google Analytics -->
 <script>
